Whole Group option of dupligroup visualization of particles does not work as expected for Viewport and Blender Internal #39966

Closed
opened 2014-04-30 11:04:06 +02:00 by ronan ducluzeau · 16 comments

System Information
Ubuntu 12.04 64 bits NVIDIA Quadro 3500 FX

Blender Version
Broken: cdc5d65
Worked: 2.70

Short description of error
Whole Group option purpose is to display and render an instance of a whole group at each particle location of a particle system.
It does not work in Viewport or for Blender Render.
But it works as expected for Cycles.

Exact steps for others to reproduce the error
In the attached .blend, a particle system is emitted at frame 1 as a volume with no physics.
A group made of default cube and a colored sphere is used as particle render.
But only one group instance is displayed and render instead of one hundred.
Switch to Rendered View, problem is the same for Blender Internal.
Switch to Cycles, particles are displayed as expected.

Whole_Group.blend

**System Information** Ubuntu 12.04 64 bits NVIDIA Quadro 3500 FX **Blender Version** Broken: cdc5d65 Worked: 2.70 **Short description of error** Whole Group option purpose is to display and render an instance of a whole group at each particle location of a particle system. It does not work in Viewport or for Blender Render. But it works as expected for Cycles. **Exact steps for others to reproduce the error** In the attached .blend, a particle system is emitted at frame 1 as a volume with no physics. A group made of default cube and a colored sphere is used as particle render. But only one group instance is displayed and render instead of one hundred. Switch to Rendered View, problem is the same for Blender Internal. Switch to Cycles, particles are displayed as expected. [Whole_Group.blend](https://archive.blender.org/developer/F86441/Whole_Group.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed on Win7/64.

Worked: blender-2.70 official
Broken: blender-2.70-5256a5d or before

Confirmed on Win7/64. Worked: blender-2.70 official Broken: blender-2.70-5256a5d or before
Howard Trickey was assigned by Bastien Montagne 2014-05-01 16:40:45 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Howardt, I guess you mind checking, but… ;)

Howardt, I guess you mind checking, but… ;)
Member

I don't quite understand why this was assigned to me, as this is in an area of Blender that I am completely unfamiliar with.

I don't quite understand why this was assigned to me, as this is in an area of Blender that I am completely unfamiliar with.
Howard Trickey was unassigned by Bastien Montagne 2014-05-01 17:12:33 +02:00
Lukas Tönne was assigned by Bastien Montagne 2014-05-01 17:12:33 +02:00

Added subscriber: @howardt

Added subscriber: @howardt

Uhu… meant to assign to Lukas actually, sorry to both of you.

Uhu… meant to assign to Lukas actually, sorry to both of you.
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Adding @Sergey here, he's been fixing some of these cases, but looks like there is just too much wrong with BI duplis to fix with simple hacks ...

Adding @Sergey here, he's been fixing some of these cases, but looks like there is just too much wrong with BI duplis to fix with simple hacks ...

Developer note: it is caused by fbf8595.

Developer note: it is caused by fbf8595.

This issue was referenced by blender/blender-addons-contrib@b2c2edf6ae

This issue was referenced by blender/blender-addons-contrib@b2c2edf6aeebd38601f1f6b652a91abd64983c4b

This issue was referenced by b2c2edf6ae

This issue was referenced by b2c2edf6aeebd38601f1f6b652a91abd64983c4b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit b2c2edf6ae.

Closed by commit b2c2edf6ae.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39966
No description provided.